2007-12-17  David Lawrence Ramsey  <pooka109@gmail.com>

	* configure.ac, doc/texinfo/nano.texi, nano.c (terminal_init):
	Change slang curses emulation support to turn off the same
	options as --enable-tiny, as it's hopelessly broken otherwise.
	* nano.c (disable_signals, main): Simplify terminal handling by
	using raw mode instead of cbreak mode.
	* text.c (execute_command): Call terminal_init() instead of just
	disable_signals() after executing the command, as the command
	may have changed the terminal settings.
	* ChangeLog.pre-2.1: Add missing attribution.
	* NEWS: Resync with NEWS from the 2.0 branch.

2007-12-10  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (main): Exit if initscr() fails.

2007-12-09  David Lawrence Ramsey  <pooka109@gmail.com>

	* faq.html: Add minor punctuation and wording fixes, and update
	various sections to account for Alpine.

2007-12-08  David Lawrence Ramsey  <pooka109@gmail.com>

	* prompt.c (do_statusbar_mouse, reset_statusbar_cursor,
	update_statusbar_line, need_statusbar_horizontal_update): Fix
	minor display and cursor placement problems when scrolling
	between pages at the statusbar prompt.

2007-12-07  David Lawrence Ramsey  <pooka109@gmail.com>

	* winio.c (get_mouseinput): Fix longstanding problem where mouse
	clicks on the statusbar prompt text wouldn't be recognized
	unless the NO_HELP flag was turned off.
	* doc/man/rnano.1, doc/man/fr/rnano.1: Update copyright notices,
	as Thijs Kinkhorst's copyrights have now been assigned to the
	Free Software Foundation.

2007-12-04  David Lawrence Ramsey  <pooka109@gmail.com>

	* nano.c (main), prompt.c (get_prompt_string), winio.c
	(do_replace_highlight): Per OKATA Akio's patch, with minor
	tweaks by me, add wnoutrefresh() calls after
	reset_(statusbar_)?cursor() calls, to ensure that the cursor is
	placed properly when using NetBSD curses.
	* nano.c (disable_mouse_support, enable_mouse_support): When
	toggling mouse support on or off, save and restore the mouse